fixed font changed on mobile

--- a/portfolio.css
+++ b/portfolio.css
@@ -67,9 +67,13 @@ html {
 }
 
 /* Base styles */
+@font-face {
+  font-family: "Comic Neue", cursive;
+  src: url(https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,700&display=swap);
+}
 
 body {
-  font-family: cursive;
+  font-family: "Comic Neue", cursive;
   background-color: black;
   font-size: 1.8rem;
   font-weight: 400;
@@ -84,7 +88,7 @@ body {
 
 h1,
 h2 {
-  font-family: cursive;
+  font-family: "Comic Neue", cursive;
   font-weight: 700;
   text-align: center;
   height: 80px;
@@ -124,7 +128,7 @@ img {
   background: var(--main-red);
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
   z-index: 10;
-  font-family: cursive;
+  font-family: "Comic Neue", cursive;
 }
 
 .nav-list {
